# mlstm_kernels

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  __init__.py  benchmark_kernels.py  benchmark_mlstm_kernels.py  dev_notes.md  environment_pt240cu121.yaml  flash_attention.patch  naming_conventions.md  pyproject.toml  pytest.ini  run_mlstm_recurrent_step_fused_triton.py  run_mlstm_recurrent_step_kernels.py  setup.cfg
.github/license-check/: config.json
.github/workflows/: license-header-check.yml
demo/: integrate_mlstm_via_backend_module_option1.ipynb  integrate_mlstm_via_direct_import_option2and3.ipynb  kernel_speed_benchmark.ipynb
envs/: environment_pt240cu121.yaml  environment_pt240cu124.yaml  environment_pt251cu124.yaml
mlstm_kernels/: __init__.py  kernel_utils.py  plot_utils.py  test_utils.py  time_utils.py  torch_utils.py
mlstm_kernels/benchmark_utils/: benchmark.py  do_bench.py  param_handling.py  plot_results.py  run_benchmark.py  runtime.py  utils.py
mlstm_kernels/components/: conv.py  ln.py
mlstm_kernels/flops_utils/: flops_computation.py  mlstm_block_flop_counts.py  mlstm_flop_analysis.py  model_flops_computation.py  slstm_block_flop_counts.py  transformer_block_flop_counts.py
mlstm_kernels/jax/: __init__.py  stride_utils.py  utils.py  xla_utils.py
mlstm_kernels/mlstm/: __init__.py  backend_module.py
mlstm_kernels/plot_utils/: __init__.py  diff_imshow.py  diff_lineplot.py  ewma.py
mlstm_kernels/test_utils/: checks.py  test_fixtures.py  test_fwbw.py  test_losses.py
mlstm_kernels/torch/: __init__.py  backend_module.py  kernel_wrappers.py  utils.py
mlstm_kernels/triton/: heuristics.py  kernel_param_heuristics.py
mlstm_kernels/utils/: kernels.py  time.py
notebooks/: mlstm_chunkwise-match_torch_fwbw_with_parallel.ipynb  mlstm_chunkwise-match_triton_fwbw_autograd.ipynb  mlstm_parallel-match_torch_fwbw_reimpl.ipynb  mlstm_parallel-match_triton_fwbw_autograd.ipynb  playground.ipynb  playground_jax.ipynb  test_backend.py
notebooks/flop_counting/: count_flops_with_pytorch.ipynb  mlstm_block--count_flops_by_hand.ipynb  mlstm_cell--count_flops_by_hand.ipynb  mlstm_cell_vs_slstm_cell_flops.ipynb
notebooks/plots_7B_model_benchmark/: avg_acc_ruler_abl.pkl  avg_acc_ruler_main.pkl  gen_time_mem_data.p  gen_time_mem_data_vllm.p  hf_7B_genlength_results--final.ipynb  hf_7B_genlength_results--for paper--final.ipynb  hf_7B_throughput_results--final.ipynb  hf_7B_throughput_results--for paper--final.ipynb  hf_7B_timetofirsttok_results--final.ipynb  hf_7B_timetofirsttok_results--for paper--final.ipynb  hf_7B_timetofirsttok_results.ipynb  plot_config.py  plot_config_for_paper.py  plot_paper_figures_custom.py  plot_results_for_paper.py  ruler_7B_igate_ablation_plot.ipynb  throughput_data.p  throughput_df.p  throughput_vllm_df.p  ttft_raw_data.p  ttft_raw_data_vllm.p  vllmhf_7B_genlength_results--final.ipynb  vllmhf_7B_throughput_results--final.ipynb  vllmhf_7B_timetofirsttok_results--final.ipynb
notebooks/plots_mlstm_kernel_benchmark/: consttoken_results.pkl  gen_results.pkl  plot_config.py  plot_consttoken_results.ipynb  plot_generate_results.ipynb
notebooks/plots_mlstm_kernel_benchmark_tfla_paper/: mlstm_tfla_paper_consttoken_benchmark_results.p  mlstm_tfla_paper_consttoken_benchmark_results_lightn_attn.p  mlstm_tfla_paper_consttoken_benchmark_results_rerun.p  mlstm_tfla_paper_head_dim_benchmark_results.p  plot_config.py  plot_mlstm_tfla_consttoken_benchmark--rerun.ipynb  plot_mlstm_tfla_consttoken_benchmark.ipynb  plot_mlstm_tfla_consttoken_benchmark_appendix.ipynb  plot_mlstm_tfla_consttoken_benchmark_appendix_gla.ipynb  plot_mlstm_tfla_consttoken_benchmark_appendix_lightnattn.ipynb  plot_mlstm_tfla_headdim_benchmark.ipynb  plot_mlstm_tfla_memory_runtime_tradeoff.ipynb
notebooks/plots_roofline_analysis/: plot_arithmetic_intensity_mlstm.ipynb  plot_flop_comparison_mlstm_formulations.ipynb  plot_optimal_chunk_size.ipynb  plot_roofline_model.ipynb  plot_theoretical_runtime_mlstm.ipynb
notebooks/plots_v5xlchunksize/: benchmark_plots.ipynb
notebooks/transfer_behavior_analysis/: m_state_explore.ipynb  mlstm_kernels_epsilon_runs.ipynb  norm_eps_vs_igbias_raw_data_df.p  plot_config.py  plot_transfer_behavior_norm_eps_grid--experimental.ipynb  plot_transfer_behavior_norm_eps_grid--paper.ipynb  plot_transfer_behavior_sig_vs_exp--paper.ipynb
notebooks/triton_explore/: understand_block_ptr.ipynb
notebooks_kernel_dev/: integrate_lightning_attn2.ipynb  kernel_speed_benchmark.ipynb
scripts/: run_hf_model_benchmark.py  run_hf_model_benchmark_debug.py  run_hf_model_benchmark_with_profile.py  run_inference_kernel_benchmarks.py  run_kernel_benchmark.py  run_mlstm_max_triton_v5xlchunksize.py  run_mlstm_max_triton_v5xlchunksize_fwbw.py  run_mlstm_model_benchmark.py  run_mlstm_recurrent_step_kernels.py  run_training_kernel_benchmark.sh  run_training_kernel_benchmarks.py  run_training_kernel_benchmarks_with_profile.py  run_vllm_model_benchmark.py
tests/: common.py  conftest.py  test_padding.py
(+342 files in other folders)
