[metadata]
version = 1.0.0
name = mlstm_kernels
description = A novel LSTM variant with promising performance compared to Transformers.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.11
include_package_data = True
install_requires =
    torch
    einops
    numpy
    omegaconf
    einops 
    opt_einsum 
    transformers
    datasets
    reportlab 
    lm-eval 
    joypy 
    ipykernel
    dacite 
    ftfy 
    ninja
    huggingface-hub
    rich
    lm-dataformat
    omegaconf 
    sentencepiece
    tokenizers
    torchmetrics 
    tqdm
    seaborn
    openpyxl 
    pykeops 
    torchtext
    tensorboard
    cryptography

[options.packages.find]
exclude =
    test*
    res*
    notebooks*
