[metadata]
name = mlstm_kernels
version = 1.0.0
description = A novel LSTM variant with promising performance compared to Transformers.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    dacite
    einops
    ipykernel
    matplotlib
    numpy
    omegaconf
    opt-einsum
    rich
    torch
    tqdm
python_requires = >=3.11
include_package_data = True

[options.packages.find]
exclude =
    test*
    res*
    notebooks*
