[metadata]
name = mlstm_kernels
version = 1.0.2
description = A library providing fast and efficient mLSTM kernels for the xLSTM.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    dacite
    einops
    ipykernel
    matplotlib
    numpy
    omegaconf
    rich
    torch
    tqdm
python_requires = >=3.11
include_package_data = True

[options.packages.find]
exclude =
    test*
    res*
    notebooks*
